2007-11-20  Dan Nicolaescu  <dann@ics.uci.edu>

	* progmodes/python.el (info-lookup-maybe-add-help):
	* progmodes/ps-mode.el (doc-view-minor-mode):
	* mail/emacsbug.el (Info-menu, Info-goto-node):
	* emulation/viper-keym.el (viper-ex)
	(viper-normalize-minor-mode-map-alist, viper-set-mode-vars-for):
	* emulation/viper-cmd.el (widget-type, widget-button-press)
	(viper-set-hooks):
	* emacs-lisp/tcover-unsafep.el (unsafep-function):
	* emacs-lisp/tcover-ses.el (ses-set-curcell, ses-update-cells)
	(ses-load, ses-vector-delete, ses-create-header-string)
	(ses-read-cell, ses-read-symbol, ses-command-hook, ses-jump):
	* emacs-lisp/gulp.el (mail-subject, mail-send): Declare as
	functions.

2007-11-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* pcvs.el (cvs-revert-if-needed): Fix copy&paste typo.

2007-11-20  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/check-declare.el (check-declare-verify): Tweak regexp
	for end of function-name.  Handle define-derived-mode.

2007-11-20  Dan Nicolaescu  <dann@ics.uci.edu>

	* progmodes/idlw-help.el: Require browse-url unconditionally, it
	is available by default.
	(idlwave-help-browse-url-available): Change default to t.

	* emulation/edt.el (defgroup, defcustom): Remove definition.
	(eval-when-compile): Remove.
	(c-mark-function):
	* textmodes/reftex-dcr.el (bibtex-beginning-of-entry):
	* textmodes/fill.el (comment-search-forward)
	(comment-string-strip):
	* progmodes/prolog.el (comint-mode, comint-send-string)
	(comint-send-region, comint-send-eof):
	* progmodes/dcl-mode.el (imenu-default-create-index-function):
	* emulation/viper-util.el (viper-forward-Word):
	* emulation/vi.el (c-mark-function):
	* emulation/edt-vt100.el (vt100-wide-mode):
	* emacs-lisp/timer.el (diary-entry-time): Declare as functions.

2007-11-19  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-open-connection-setup-interactive-shell):
	Still some tuning in case of an echoing shell.
	(tramp-send-command): Connection property "remote-echo" is not